--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/zubi1">
+    android:background="@drawable/splash_background">
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -12,16 +12,18 @@
         android:layout_centerInParent="true"
         android:gravity="center">
 
-        <ImageView
+        <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/logo"
             android:layout_width="300dp"
             android:layout_height="240dp"
             android:src="@drawable/mind"
-             />
+            android:scaleType="centerCrop"
+            app:shapeAppearanceOverlay="@style/RoundedCorners"
+            android:contentDescription="@string/app_name" />
 
         <TextView
             android:layout_marginTop="20dp"
-            android:text="MindEase"
+            android:text="@string/app_name"
             android:textSize="32sp"
             android:textStyle="bold"
             android:textColor="@color/white"
@@ -29,10 +31,10 @@
             android:layout_height="wrap_content"/>
 
         <TextView
-            android:layout_marginTop="20dp"
-            android:text="Your mind deserves peace"
-            android:textSize="20sp"
-            android:textColor="@color/white"
+            android:layout_marginTop="8dp"
+            android:text="@string/splash_tagline"
+            android:textSize="18sp"
+            android:textColor="@color/white_soft"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
     </LinearLayout>
