--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/zubi1">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
         android:id="@+id/nav_home"
@@ -26,11 +22,9 @@
         android:title="Journal"/>
 
     <item
-        android:id="@+id/nav_achievements"
-        android:icon="@drawable/achievements"
-        android:title="Awards"/>
-    <item
         android:id="@+id/nav_profile"
         android:icon="@drawable/profile"
-        android:title="Profile" />
+        android:title="Profile"/>
+
+
 </menu>
